# openenv-ticket-cleaner

./: Dockerfile  README.md  inference.py  main.py  model.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
