[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket_cleaner_env"
version = "1.0.0"
description = "Ticket cleaning environment for OpenEnv hackathon"
dependencies = [
    "pandas",
    "openenv-core",
    "pydantic",
    "openai",
    "uvicorn",
    "fastapi"
]
