[project]
name = "ticket-cleaner"
version = "0.1.0"
description = "OpenEnv Environment"
dependencies = [
    "pandas",
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
